fix overflow and some final touches

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,12 @@
 
 body {
   @apply font-figtree;
+  overflow-x: hidden;
 }
 
 html {
   scroll-behavior: smooth;
 }
-
+* {
+  box-sizing: border-box;
+}
